[package]
name = "lab4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["stream", "blocking"] }
futures-util = "0.3.14"
tokio = { version = "1.35.1", features = ["full"] }

